# meowth

./: .env.example  .gitignore  Makefile  README.md  SpecKit.md  pyproject.toml
.github/: copilot-instructions.md
.specify/memory/: constitution.md
config/: tools.yaml
docs/: langfuse-integration.md
specs/001-openai-chat-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-openai-chat-integration/checklists/: requirements.md
specs/001-openai-chat-integration/contracts/: README.md  ai-service.yaml  slack-events.yaml
specs/001-slack-mention-bot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-slack-mention-bot/checklists/: requirements.md
specs/001-slack-mention-bot/contracts/: README.md  slack-events.yaml
specs/001-slack-notion-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-slack-notion-integration/checklists/: requirements.md
specs/001-slack-notion-integration/contracts/: api.yaml  slack-integration.md
specs/002-ai-agent-tools/: data-model.md  plan.md  quickstart.md  research.md  slack-llamaindex-integration-research.md  spec.md  tasks.md
specs/002-ai-agent-tools/checklists/: requirements.md
specs/002-ai-agent-tools/contracts/: api-contracts.md
src/meowth/: __init__.py  bot.py  client.py  health.py  main.py  metrics.py  models.py
src/meowth/ai/: __init__.py  agent.py  auto_selection.py  client.py  context.py  context_analyzer.py  conversation_history.py  execution.py  intent.py  models.py  monitoring.py  response_formatter.py
src/meowth/ai/tools/: __init__.py  base.py  config.py  config_manager.py  context_aware.py  error_handler.py  exceptions.py  factories.py  logging.py  metadata.py  openai_tools.py  rate_limiter.py  registry.py  slack_tools.py
src/meowth/handlers/: __init__.py  ai_mention.py  mention.py
src/meowth/utils/: config.py  logging.py
tests/: __init__.py
tests/contract/: test_tool_contracts.py
tests/fixtures/: slack_events.py
tests/integration/: test_ai_integration.py  test_auto_tool_selection.py  test_bot_integration.py  test_context_awareness.py  test_tools_integration.py
tests/unit/: test_client.py  test_mention_handler.py
tests/unit/ai/: __init__.py  test_agent_prompts.py  test_client.py  test_context.py  test_context_analyzer.py  test_intent_classifier.py  test_monitoring.py  test_response_formatter.py
tests/unit/ai/tools/: __init__.py  test_openai_tools.py  test_slack_tools.py
tests/unit/handlers/: test_ai_mention.py
